# LocalAI-Assistant

./: .gitignore  LICENSE  README.md  build.bat
src/: CMakeLists.txt
src/capture/: AudioCaptureSDL.cpp  CMakeLists.txt  IAudioCapture.h  capture_export.h  common.h
src/cmake/: deploy_qt.cmake
src/core/: AIModelHub.cpp  AIModelHub.h  CMakeLists.txt  CommonDef.h  ConversationManager.cpp  ConversationManager.h  CoreStatus.cpp  IModelProvider.h  IPlugin.h  InferenceEngine.cpp  InferenceEngine.h  LLMEngine.cpp  LLMEngine.h  LocalAIContext.cpp  LocalAI_ModelInfo.cpp  Orchestrator.cpp  Orchestrator.h  PluginManager.cpp  PluginManager.h  PromptGenerator.cpp  PromptGenerator.h  RagRetriever.cpp  RagRetriever.h  ThreadPool.cpp  ThreadPool.h  core_c_api.cpp  core_c_api.h  core_common.h  core_export.h  prompt_template.txt
src/frontend/: CMakeLists.txt  ChatItemDelegate.cpp  ChatItemDelegate.h  ChatListModel.cpp  ChatListModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  app.cpp  main.cpp
src/frontend/qml/: Main.qml
src/inference-provider/: CMakeLists.txt  IInferenceProvider.h
src/inference-provider/llama/: LlamaInferenceProvider.h
src/model-provider/: CMakeLists.txt  IModelProvider.cpp  IModelProvider.h  model_provider_export.h
src/model-provider/ASR/: ASRProviderWhisper.cpp  ASRProviderWhisper.h
src/model-provider/LLM/: LLMProviderLlama.cpp  LLMProviderLlama.h
src/model-provider/STT/: STTProviderWhisper.h
src/model-provider/embedding/: EmbeddingProviderSbert.cpp  EmbeddingProviderSbert.h
src/model-provider/vision/: VisionProvider.cpp  VisionProvider.h
src/plugins/simple_plugin/: CMakeLists.txt  capabilities.json  simple_plugin.cpp  simple_plugin.h
tools/: build.py
